service-memory.yml
apiVersion: v1
kind: Service
metadata:
  name: memory-frontend
  labels:
    app: memory-deployment
spec:
  ports:
    - port: 80
      targetPort: 3838
  selector:
    app: memory-app
    tier: frontend
  type: NodePort
