ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: memory-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: cervangirard.me
      http:
        paths:
          - path: /
            backend:
              serviceName: memory-frontend
              servicePort: 80
